ok yes pscss is broken

--- a/templates/sbnext-finalium/watch.twig
+++ b/templates/sbnext-finalium/watch.twig
@@ -137,11 +137,11 @@
                   <br>
                </div>
                <div class="col-md-6 right">
-                  <h1 style="font-weight:normal;margin-bottom: 4px;">{{ video.views }}</h1>
+                  <h1 class="viewcount">{{ video.views }}</h1>
                   <div class="likesaber">
                      <div class="like" style="width:{{ videoRatio}}%"></div>
                   </div>
-                  <div style="margin-top: 16px;">{{ icon("hand-thumbs-up-fill", 12) }} {{ total_likes }} {{ icon("hand-thumbs-down-fill", 12) }} {{ total_dislikes }}  </div>
+                  <div class="below-likesaber">{{ icon("hand-thumbs-up-fill", 12) }} {{ total_likes }} {{ icon("hand-thumbs-down-fill", 12) }} {{ total_dislikes }}  </div>
                </div>
             </div>
 			<div class="grid" style="margin-top:5px;">
