--- a/templates/sbnext-finalium/components/player.twig
+++ b/templates/sbnext-finalium/components/player.twig
@@ -1,11 +1,13 @@
-         <div id="container">
+         <div id="container" style="margin:0;">
             <!--- todo: redo "video processed" message to use _error.twig -gr 7/22/2021 --->
             {% if (video.flags b-and 2) %}
             <div style="background-color: black; color: white; text-align: center; padding: 15rem">
                {{ __("This video is being processed. Try again later.") }}
             </div>
             {% else %}
-            <video id="videoContainer" controls crossorigin playsinline poster="{{ video_thumbnail(video.video_id) }}"></video>
+            <video style="aspect-ratio: 16 / 9;width: -moz-available;" id="videoContainer" controls crossorigin playsinline poster="{{ video_thumbnail(video.video_id) }}">
+			<source src="./videos/{{ video.video_id }}.webm" type="video/webm" />
+			</video>
             {% endif %}
          </div>
          <script src="https://cdn.dashjs.org/latest/dash.all.min.js"></script>
