--- a/templates/sbnext-finalium/components/player.twig
+++ b/templates/sbnext-finalium/components/player.twig
@@ -7,6 +7,7 @@
             {% else %}
             <video style="aspect-ratio: 16 / 9;width: -moz-available;" id="videoContainer" controls crossorigin playsinline poster="{{ video_thumbnail(video.video_id) }}">
 			<source src="./videos/{{ video.video_id }}.webm" type="video/webm" />
+			<source src="./videos/{{ video.video_id }}.mp4" type="video/mp4" />
 			</video>
             {% endif %}
          </div>
