fix a lot of painful suffering

--- a/templates/sbnext-finalium/components/player_2013.twig
+++ b/templates/sbnext-finalium/components/player_2013.twig
@@ -1,4 +1,4 @@
-         <div id="container" style="aspect-ratio: 16/9;">
+         <div id="container">
             <!--- todo: redo "video processed" message to use _error.twig -gr 7/22/2021 --->
             {% if (video.flags b-and 2) %}
             <div style="background-color: black; color: white; text-align: center; padding: 15rem">
@@ -53,9 +53,9 @@ yt.setConfig({
             "is_html5_mobile_device": false
         },
         "attrs": {
-            "height": "100%",
+            "height": "360px",
             "id": "movie-player",
-            "width": "100%"
+            "width": "480px"
         },
         "url_v9as2": "http:\/\/s.ytimg.com\/yts\/swfbin\/player-vflqv4MLv\/cps.swf",
         "assets": {
