--- a/templates/sbnext-finalium/components/player.twig
+++ b/templates/sbnext-finalium/components/player.twig
@@ -6,8 +6,8 @@
             </div>
             {% else %}
             <video style="aspect-ratio: 16 / 9;width: -moz-available;" id="videoContainer" controls crossorigin playsinline poster="{{ video_thumbnail(video.video_id) }}">
+			<source src="./videos/{{ video.video_id }}.converted.mp4" type="video/mp4" />
 			<source src="./videos/{{ video.video_id }}.webm" type="video/webm" />
-			<source src="./videos/{{ video.video_id }}.mp4" type="video/mp4" />
 			</video>
             {% endif %}
          </div>
