--- a/templates/sbnext-finalium/index.twig
+++ b/templates/sbnext-finalium/index.twig
@@ -66,11 +66,7 @@
 	</div>
 	<div class="col-md-4">
 		<h3>{{ __("What's new?") }}</h3>
-		<p>{{ __("Welcome to the brand new squareBracket! We've heard it, the old layout sucked so we have redesigned squareBracket to have a better user interface.") }}</p>
-		<p>{{ __("We have introduced many new features! Including:") }}</p>
-		<li>{{ __("Categories") }}</li>
-		<li>{{ __("Forums") }}</li>
-		<li>{{ __("Music") }}</li>
+		<p>{{ __("Welcome to the brand new squareBracket! We've heard it, the old layout sucked, so we have redesigned squareBracket to have a better user interface.") }}</p>
 	</div>
 </div>
 <br><br>
