rework view system
views are now tracked by users (hashed) ip

--- a/templates/sbnext-finalium/watch.twig
+++ b/templates/sbnext-finalium/watch.twig
@@ -49,7 +49,7 @@
                   <br>
                </div>
                <div class="col-md-6 right">
-                  <h1 class="viewcount">{{ video.views }}</h1>
+                  <h1 class="viewcount">{{ viewCount }}</h1>
                   <div class="likesaber">
                      <div class="like" style="width:{{ videoRatio}}%"></div>
                   </div>
