--- a/templates/sbnext-finalium/listen.twig
+++ b/templates/sbnext-finalium/listen.twig
@@ -1,11 +1,5 @@
 {% extends "_layout.twig" %}
 {% block title %}{{ music.title }}{% endblock %}
 {% block content %}
-<script src="assets/audiojs/audio.js"></script>
-<script>
-  audiojs.events.ready(function() {
-    var as = audiojs.createAll();
-  });
-</script>
-<audio src="{{ music.file }}" preload="auto" />
+<audio controls src="{{ music.file }}"/>
 {% endblock %}
