--- a/templates/sbnext-finalium/user.twig
+++ b/templates/sbnext-finalium/user.twig
@@ -1,10 +1,21 @@
 {% extends "_layout.twig" %}
-{% block title %}{{ name }}{% endblock %}
+{% block title %}{{ userpagedata.title }}{% endblock %}
 {% block head %}
+<meta name="title" content="{{ userpagedata.title }} - squareBracket">
+<meta name="description" content="{{ userpagedata.about|length > 250 ? userpagedata.about|slice(0, 250) ~ '...' : userpagedata.about }}">
+<meta name="theme-color" content="{{ userpagedata.customcolor }}">
+<meta property="og:site_name" content="squareBracket"/>
+<meta property="og:title" content="{{ userpagedata.title }} - squareBracket">
+<meta property="og:description" content="{{ userpagedata.about|length > 250 ? userpagedata.about|slice(0, 250) ~ '...' : userpagedata.about }}">
+<meta property="og:image" content="{{ domain }}/assets/profpic/{{ userpagedata.name }}.png">
+<meta property="og:url" content="{{ page_url }}">
+<meta property="twitter:title" content="{{ userpagedata.title }} - squareBracket">
+<meta property="twitter:description" content="{{ userpagedata.about|length > 250 ? userpagedata.about|slice(0, 250) ~ '...' : userpagedata.about }}">
+<meta property="twitter:image" content="{{ domain }}/assets/profpic/{{ userpagedata.name }}.png">
+<meta name="twitter:card" content="summary_large_image">
 <script>
 	user_id = '{{ userpagedata.id }}';
 </script>
-<link href="https://unpkg.com/plyr@3.6.8/dist/plyr.css" rel="stylesheet">
 {% endblock %}
 {% block content %}
 <style>
@@ -101,7 +112,7 @@
 {% for latestVideo in latestVideos %}
 {{ video_box(latestVideo) }}
 {% else %}
-<p>{{ __("There are currently no videos uploaded by %s.", [user.title]) }}</p>
+<p>{{ __("There are currently no videos uploaded by %s.", [userpagedata.title]) }}</p>
 {% endfor %}
 {% if userdata.id == id %}
 {% set forceuser = "&forceuser" %}
