--- a/templates/sbnext-finalium/_layout.twig
+++ b/templates/sbnext-finalium/_layout.twig
@@ -13,7 +13,7 @@
 	<meta name="application-name" content="squareBracket">
 	<meta name="msapplication-TileColor" content="#2b5797">
 	<meta name="msapplication-config" content="/assets/icons/browserconfig.xml">
-	<meta name="theme-color" content="#dfecff">
+	<meta name="theme-color" content="#4723d9">
 	<link rel="stylesheet" href="/assets/css/style.css" type="text/css">
 	{% if theme == 'dark' %}
 		<link id="darkthm" rel="stylesheet" href="/assets/css/darkmode.css" type="text/css">
