--- a/templates/sbnext-finalium/browse.twig
+++ b/templates/sbnext-finalium/browse.twig
@@ -6,7 +6,7 @@
 <h1>{{ title }}</h1>
 <div class="grid">
 	<div class="col-md-4">
-		<div class="well sidebar-nav">
+		<div class="card card-body-fat sidebar-nav">
 			<ul class="nav nav-list">
 				<li class="nav-header">{{ __("Categories") }}</li>
 				<li {% if type=='all' %}class="active" {% endif %}><a href="browse.php?type=all">{{ __("All") }}</a></li>
