lmao subrocks 2012 just came out
it's so fucking epic

--- a/templates/sbnext-finalium/browse.twig
+++ b/templates/sbnext-finalium/browse.twig
@@ -23,7 +23,7 @@
 	</div>
 	<div class="col-md-8">
 		{% for level in levels %}
-			{{ video_box(level) }}
+			{{ small_video_box(level) }}
 		{% else %}
 			{{ __("There are no videos of that category. You could create one!") }}
 		{% endfor %}
