--- a/templates/sbnext-finalium/index.twig
+++ b/templates/sbnext-finalium/index.twig
@@ -1,10 +1,10 @@
 {% extends "_layout.twig" %}
 {% block head %}
 <meta name="title" content="squareBracket">
-<meta name="description" content="SubRocks but every 'Bhief' and '2012' is replaced with 'Gamerappa' and 'sbNext'">
+<meta name="description" content="Unbelivable, This is not PokTube.">
 <meta property="og:site_name" content="squareBracket"/>
 <meta property="og:title" content="squareBracket">
-<meta property="og:description" content="SubRocks but every 'Bhief' and '2012' is replaced with 'Gamerappa' and 'sbNext'">
+<meta property="og:description" content="Unbelivable, This is not PokTube.">
 <meta property="og:image" content="{{ domain }}assets/logo_square_icon.png">
 <meta property="og:url" content="{{ page_url }}">
 {% endblock %}
